--- a/CSS_advanced/styles/6-style.css
+++ b/CSS_advanced/styles/6-style.css
@@ -7,10 +7,12 @@ body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 
 a {
@@ -43,4 +45,6 @@ a {
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+    --font-weight-regular: 400;
+    --font-weight-bold: 700;
 }
