--- a/CSS_advanced/styles/11-style.css
+++ b/CSS_advanced/styles/11-style.css
@@ -33,6 +33,14 @@ a {
     text-align: var(--section-header-align);
 }
 
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
+
 .section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
@@ -61,4 +69,6 @@ a {
     --line-height-big: 1.8;
     --section-header-align: center;
     --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
 }
