--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+*::before {
+    box-sizing: border-box;
+}
+
+*::after {
+    box-sizing: border-box;
+}
+
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%
