--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -59,20 +59,20 @@ a:active {
 }
 
 .section {
-    padding: var(--section-padding), var(--section-padding), var(--section-padding), var(--section-padding);
+    padding: var(--section-padding);
 }
 
 .section-header {
     text-align: var(--section-header-align);
-    padding: var(--section-heading-padding), var(--section-header-padding), var(--section-header-padding), var(--section-header-padding);
+    padding: var(--section-heading-padding);
 }
 
 .section-body {
-    padding: var(--section-body-padding), var(--section-body-padding), var(--section-body-padding), var(--section-body-padding);
+    padding: var(--section-body-padding);
 }
 
 .section-footer {
-    padding: var(--section-footer-padding), var(--section-footer-padding), var(--section-footer-padding), var(--section-footer-padding);
+    padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
 
@@ -129,5 +129,5 @@ a:active {
 }
 
 footer {
-    padding: var(--footer-padding), var(--footer-padding), var(--footer-padding), var(--footer-padding);
+    padding: var(--footer-padding);
 }
