--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -79,7 +79,7 @@ a:active {
     background-color: var(--color-light-grey);
 }
 
-ul .row {
+.row ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
