--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -61,7 +61,7 @@ h6 {
 }
 
 .section-hero {
-    background-size: 90rem, auto;
+    background-size: 90rem auto;
 }
 
 .section-hero .section-title {
