--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -69,7 +69,7 @@ h6 {
 }
 
 .section-hero .section-inner {
-    padding: 10rem, 40rem, 2rem, 0;
+    padding: 10rem 40rem 2rem 0;
 }
 
 .nav .nav-item {
