--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -50,11 +50,11 @@ h6 {
     top: 0;
     left: 0;
     background-color: var(--color-white);
-    width: 0%;
-    height: 20%;
+    width: 0;
+    height: 0.2rem;
 }
 
-.nav .nav-item:hover .nav-link {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
