--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -130,7 +130,7 @@ h6 {
     position: relative;
 }
 
-.card-testimonial .card-quote {
+.card-testimonial .card-quote::before {
     content: "\201C";
     position: absolute;
     top: -4.5rem;
