--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -224,8 +224,9 @@ a:active {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
-    transition: var(--transition-duration);
-    transition-property: background-color color;
+    transition-duration: var(--transition-duration);
+    transition-property: color;
+    transition-property: background-color;
 }
 
 ul.row {
