--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -124,7 +124,7 @@ h6 {
 
 .card-work:hover .card-image {
     transform: scale(1.2);
-    transition: var(–transition-duration) var(transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 
@@ -228,8 +228,7 @@ a:active {
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
     transition-duration: var(--transition-duration);
-    transition-property: color;
-    transition-property: "background-color";
+    transition-property: color "background-color";
 }
 
 ul.row {
