--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -228,7 +228,7 @@ a:active {
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
     transition-duration: var(--transition-duration);
-    transition-property: color background-color;
+    transition-property: background-color color;
 }
 
 ul.row {
